css/styles.css
:root {
  --main-design-blue: #2196f3;
  --main-design-black: #000;
  --main-design-white: #fff;
  --primary-text-color: #212121;
  --secondary-text-color: #757575;
  --secondary-background-color: #2f303a;
  --contrast-elements-color: #f5f4fa;
}
ul {
  margin: 0 auto;
  padding: 0;
  list-style: none;
}
p,
h1,
h2,
h3 {
  margin: 0 auto;
}

body {
  font-family: "Roboto", sans-serif;
  color: var(--primary-text-color);
}
.container {
  width: 1200px;
  margin: 0 auto;
}
.section {
  padding-top: 94px;
  padding-bottom: 94px;
  margin: 0 auto;
}
.first-logo,
.second-logo {
  font-family: "Raleway";
  font-weight: 700;
  font-size: 26px;
  line-height: 100%;
  letter-spacing: 0.03em;
  color: var(--main-design-blue);
}

.first-logo,
.second-logo {
  color: var(--main-design-blue);
}
.logo {
  text-decoration: none;
  padding-top: 24px;
  padding-bottom: 25px;
}

.first-logo span {
  color: var(--main-design-black);
}

.second-logo span {
  color: var(--main-design-white);
}

.nav-link {
  text-decoration: none;
  font-weight: 500;
  font-size: 14px;
  line-height: 100%;
  letter-spacing: 0.02em;
  color: var(--primary-text-color);
}

.header-nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid #ececec;
}
.nav-links {
  display: flex;
  justify-content: space-between;
}
.nav-bar {
  display: flex;
  align-items: center;
  gap: 46px;
  margin-left: 93px;
}
.header-contact {
  display: flex;
  gap: 50px;
}
.hero-section {
  background-color: var(--secondary-background-color);
  padding-top: 200px;
  padding-bottom: 200px;
}
.hero-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 30px;
}
.hero-header {
  color: var(--main-design-white);
  max-width: 696px;
  font-weight: 900;
  font-size: 44px;
  line-height: 116%;
  letter-spacing: 0.06em;
  text-align: center;
  text-transform: uppercase;
}
.button-box {
  background-color: var(--main-design-blue);
  color: var(--main-design-white);
  cursor: pointer;
  width: 200px;
  height: 50px;
  font-size: 16px;
  line-height: 160%;
  letter-spacing: 0.06em;
  border: none;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
  border-radius: 4px;
}

.footer-container {
  background-color: var(--secondary-background-color);
  padding: 60px 0px;
}
.footer-items {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.article-box {
  display: flex;
  gap: 30px;
}
.article-name {
  font-weight: 700;
  font-size: 14px;
  line-height: 100%;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  margin-bottom: 10px;
}
.article-overview {
  color: var(--secondary-text-color);
  line-height: 146%;
  letter-spacing: 0.03em;
}
.secondary-header {
  text-align: center;
  font-size: 36px;
  line-height: 100%;
  letter-spacing: 0.03em;
}

.information-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 50px;
  margin-top: 94px;
}
.team-section {
  background-color: var(--contrast-elements-color);
}
.team-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 50px;
}
.team-items {
  display: flex;
  justify-content: center;
  gap: 30px;
}
.photo-box {
  height: 368px;
  background-color: var(--main-design-white);
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
    0px 2px 1px rgba(0, 0, 0, 0.2);
  border-radius: 0px 0px 4px 4px;
}
.name {
  font-weight: 500;
  font-size: 16px;
  line-height: 100%;
  text-align: center;
  letter-spacing: 0.03em;
  margin-top: 30px;
  margin-bottom: 10px;
}
.position {
  color: var(--secondary-text-color);
  font-size: 16px;
  line-height: 100%;
  text-align: center;
  letter-spacing: 0.03em;
  margin-bottom: 30px;
}
.filter {
  display: flex;
  justify-content: center;
  margin-bottom: 50px;
  gap: 10px;
}
.filter-button {
  font-weight: 500;
  font-size: 16px;
  line-height: 139%;
  letter-spacing: 0.03em;
  text-align: center;
  background-color: var(--contrast-elements-color);
  border: none;
  cursor: pointer;
  padding: 6px 22px;
  border-radius: 4px;
}
.filter-button:focus,
.filter-button:hover {
  background: var(--main-design-blue);
  color: var(--main-design-white);
}
.portfolio {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 30px;
  vertical-align: middle;
}

.portfolio-element {
  width: 370px;
  height: 404px;
  text-align: left;
  vertical-align: middle;
  margin: 0 auto;
  border: 1px solid #eee;
}
.project-description {
  margin: 0px;
  padding: 0px;
}
.project-name {
  font-weight: 700;
  font-size: 18px;
  line-height: 200%;
  letter-spacing: 0.06em;
  margin: 20px 24px 4px;
}

.project-type {
  font-size: 16px;
  line-height: 188%;
  color: var(--secondary-text-color);
  letter-spacing: 0.03em;
  margin: 0 24px 20px;
}

.address-info {
  color: var(--main-design-white);
  line-height: 171%;
  font-style: normal;
  letter-spacing: 0.03em;
}
.footer-contact {
  display: flex;
  flex-direction: column;
  text-align: left;
  margin: 0;
  gap: 9px;
}

.contact-item {
  font-style: normal;
  text-decoration: none;
  color: var(--secondary-text-color);
  letter-spacing: 0.03em;
}
.contact-item:hover,
.contact-item:focus,
.nav-link:hover,
.nav-link:focus {
  color: var(--main-design-blue);
}

